# aero-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/scripts/: check-math-boundary.sh  check-platform-boundary.sh  check-rhi-boundary.sh  check-scene-boundary.sh
.github/workflows/: ci.yml
cmake/: profiling.cmake  reflect.cmake  sanitizers.cmake  shaders.cmake
docs/: 00-overview.md  01-tech-stack.md  02-adrs.md  03-architecture.md  04-conventions-setup.md  05-roadmap.md  06-scope-and-non-goals.md  07-tasks.md  08-risks.md  09-file-formats.md  future-roadmap.md
docs/plans/: 0.1.1-repo-cmake-skeleton.md  0.1.2-vcpkg-manifest.md  0.1.3-github-actions-ci-matrix.md  0.1.4-sanitizers-test-harness.md  0.1.5-tracy-integration.md
docs/specs/: 0.1.2-vcpkg-manifest.md  0.1.3-github-actions-ci-matrix.md  0.1.4-sanitizers-test-harness.md  0.1.5-tracy-integration.md
docs/tasks/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
editor/: CMakeLists.txt
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/aero/core/: handle.hpp  jobs.hpp  log.hpp  math.hpp  profiler.hpp  slot_map.hpp  time.hpp  vfs.hpp
engine/core/include/aero/core/math/: constants.hpp  mat3.hpp  mat4.hpp  quat.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp
engine/core/src/: jobs.cpp  log.cpp  vfs.cpp
engine/core/src/math/: glm_backend.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/aero/platform/: audio.hpp  context.hpp  event.hpp  input.hpp  platform.hpp  window.hpp
engine/platform/internal/aero/platform/internal/: native_window.hpp
engine/platform/src/: audio_device.cpp  input.cpp  miniaudio_impl.c  platform.cpp
engine/reflect/: CMakeLists.txt
engine/reflect/include/aero/reflect/: annotations.hpp  json_reader.hpp  json_value.hpp  json_writer.hpp  scene_format.hpp  serialize.hpp
engine/reflect/src/: json_reader.cpp  json_value.cpp  json_writer.cpp  scene_format.cpp  serialize.cpp
engine/render/: CMakeLists.txt
engine/render/include/aero/render/: renderer.hpp
engine/render/src/: renderer.cpp
engine/rhi/: CMakeLists.txt
engine/rhi/include/aero/rhi/: descriptors.hpp  device.hpp  format.hpp  handles.hpp  rhi.hpp  shader_loader.hpp  types.hpp
engine/rhi/src/: format.cpp  sdl_gpu_backend.cpp  shader_loader.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/aero/scene/: camera.hpp  component.hpp  entity.hpp  light.hpp  scene.hpp  transform.hpp  world.hpp
engine/scene/internal/aero/scene/internal/: world_access.hpp
engine/scene/src/: camera.cpp  transform.cpp  world.cpp
runtime/: CMakeLists.txt
samples/: CMakeLists.txt
samples/phase-0-clear/: CMakeLists.txt  main.cpp
samples/phase-0-cube/: CMakeLists.txt  VALIDATION.md  cube_mesh.hpp  fps_gate.hpp  main.cpp
samples/phase-0-window/: CMakeLists.txt  main.cpp
shaders/: CMakeLists.txt  cube.frag.hlsl  cube.vert.hlsl  triangle.frag.hlsl  triangle.vert.hlsl
tests/: .clang-tidy  CMakeLists.txt  audio_device_test.cpp  camera_test.cpp  handle_test.cpp  input_test.cpp  jobs_boundary_probe.cpp  jobs_test.cpp  light_test.cpp  log_test.cpp  lsan.supp  math_boundary_probe.cpp  math_test.cpp  platform_boundary_probe.cpp  platform_event_test.cpp  platform_test.cpp  profiler_test.cpp  render_clear_test.cpp  render_cube_test.cpp  rhi_boundary_probe.cpp  rhi_device_test.cpp  rhi_format_test.cpp  rhi_shader_pipeline_test.cpp  rhi_swapchain_test.cpp  rhi_test_support.hpp  rhi_types_test.cpp  sanity_test.cpp  scene_boundary_probe.cpp  scene_format_test.cpp  scene_test.cpp  shader_loader_test.cpp  slot_map_test.cpp  test_main.cpp  time_test.cpp  transform_test.cpp  vfs_test.cpp  vulkan_stack_pin.cpp
tests/reflect-gen/: incremental_e2e.cmake  json_test.cpp  meta_test.cpp  run_case.cmake
tests/reflect-gen/fixtures/: aero_reflect.hpp  component_basic.hpp  component_codegen.hpp  component_limits.hpp  component_multi.hpp  component_nested.hpp  component_tag.hpp  component_unsupported.hpp  component_wiring.hpp  engine_component.hpp  plain_component.hpp
tests/reflect-gen/incremental/: CMakeLists.txt
tests/reflect-gen/incremental/fixtures/: widget.hpp  widget_types.hpp
tests/shaderc/: run_case.cmake  verify_artifacts.cmake
tests/shaderc/fixtures/: bad_syntax.frag.hlsl  define_gated.frag.hlsl  uniform_color.frag.hlsl  with_include.frag.hlsl
tests/shaderc/fixtures/inc/: common.hlsli
tools/: CMakeLists.txt
tools/reflect-gen/: CMakeLists.txt  README.md
tools/reflect-gen/src/: main.cpp
tools/shaderc/: CMakeLists.txt  README.md  bootstrap.cmake
tools/shaderc/src/: main.cpp
